# RoI

./: .gitignore  Cargo.toml  README.md
src/: app.rs  central_panel.rs  config.rs  config_data.rs  drop_files.rs  image_data.rs  left_side.rs  main.rs  right_side.rs  top_side.rs
