[package]
name = "RoI"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"

kornia = "0.1.7"

egui_plot = "0.30.0"
anyhow = "1.0.93"
env_logger = "0.11.6"
rfd = "0.15.2"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
